分類再更新

--- a/index.html
+++ b/index.html
@@ -51,8 +51,20 @@
             </div>
 
             <div class="collapsible-section">
-                <button type="button" class="collapsible-header">主分類</button>
-                <div class="collapsible-content" id="primaryCategoryButtons">
+                <button type="button" class="collapsible-header">領域</button>
+                <div class="collapsible-content" id="domainCategoryButtons">
+                </div>
+            </div>
+
+            <div class="collapsible-section">
+                <button type="button" class="collapsible-header">主題</button>
+                <div class="collapsible-content" id="topicCategoryButtons">
+                </div>
+            </div>
+
+            <div class="collapsible-section">
+                <button type="button" class="collapsible-header">來源</button>
+                <div class="collapsible-content" id="sourceCategoryButtons">
                 </div>
             </div>
 
