--- a/sentence.html
+++ b/sentence.html
@@ -4,6 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Boyd Vocabulary</title>
     <link rel="stylesheet" href="sentence.css">
+
+    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app-compat.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-auth-compat.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore-compat.js" defer></script>
+    
+    <script src="auth-manager.js" defer></script>
+    <script src="sentence.js" defer></script>
+
 </head>
 <body>
     <div id="loading-overlay">
@@ -115,6 +123,5 @@
         </div>
     </div>
 
-    <script src="sentence.js" defer></script>
 </body>
 </html>
