--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app-compat.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-auth-compat.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore-compat.js" defer></script>
-
+    <script src="auth-manager.js" defer></script>
     <script src="index.js" defer></script>
 </head>
 <body>
