--- a/index.html
+++ b/index.html
@@ -197,16 +197,20 @@
                 <textarea id="edit-meaning" rows="4" placeholder="例如: A round fruit..."></textarea>
             </div>
 
-            <div class="form-group-row">
-                <div>
-                    <label>詞性/分類 (Domain)</label>
-                    <input type="text" id="edit-domain" placeholder="例如: 生活">
-                </div>
-                <div>
-                    <label>主題 (Topic)</label>
-                    <input type="text" id="edit-topic" placeholder="例如: 水果">
-                </div>
-            </div>
+<div class="form-group-row">
+    <div>
+        <label>詞性/分類 (Domain)</label>
+        <input type="text" id="edit-domain" placeholder="例如: 生活">
+    </div>
+    <div>
+        <label>主題 (Topic)</label>
+        <input type="text" id="edit-topic" placeholder="例如: 水果">
+    </div>
+    <div>
+        <label>來源 (Source)</label>
+        <input type="text" id="edit-source" placeholder="例如: The Alchemist">
+    </div>
+</div>
 
             <div class="form-group-row">
                 <div>
