--- a/index.html
+++ b/index.html
@@ -645,8 +645,9 @@
             </div>
 
             <div style="margin-bottom: 20px;">
-                <button class="button" onclick="exportAllData()" style="width: auto; padding: 0 20px; margin: 5px;">完整匯出</button>
-                <button class="button" onclick="clearAllStorageData()" style="width: auto; padding: 0 20px; margin: 5px; background-color: #EF5350;">清空全部資料</button>
+                <button class="button" onclick="exportAllData()" style="width: auto; padding: 0 20px; margin: 5px;">📤 完整匯出</button>
+                <button class="button" onclick="importAllData()" style="width: auto; padding: 0 20px; margin: 5px; background-color: #66BB6A;">📥 完整匯入</button>
+                <button class="button" onclick="clearAllStorageData()" style="width: auto; padding: 0 20px; margin: 5px; background-color: #EF5350;">🗑️ 清空全部資料</button>
             </div>
 
             <div class="storage-editor-tabs">
