--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             max-height: calc(100vh - 180px);
             overflow-y: auto;
             padding: 20px;
-            margin: 10px;
+            margin: 10px auto; max-width: 414px;
             border: 1px solid var(--border-color);
             background: var(--bg-secondary);
             border-radius: 15px;
@@ -832,7 +832,7 @@
             <button class="button" id="exit-highlight-mode-btn" style="width: auto; height: 35px; padding: 0 15px;">返回</button>
         </div>
         
-        <div style="padding: 10px 15px;">
+        <div style="padding: 10px 15px; max-width: 414px; margin: 0 auto;">
             <div class="audio-controls-wrapper">
                 <div class="audio-controls">
                     <button class="audio-btn" id="highlight-play-btn">
