--- a/quiz.html
+++ b/quiz.html
@@ -746,7 +746,7 @@
             // 顯示測驗類型選擇區域
             const quizTypeSelector = document.querySelector('.quiz-type-selector');
             if (quizTypeSelector) {
-                quizTypeSelector.style.display = 'flex';
+                quizTypeSelector.style.display = 'grid';
             }
             
             // 更新標題為「測驗區」
