--- a/quiz.html
+++ b/quiz.html
@@ -482,11 +482,13 @@
              ⚙️ 單字測驗記憶度管理面板
         ════════════════════════════════════════ -->
         <div id="wordMemoryManagerPanel" class="categories-panel" style="display:none;">
-            <button class="back-button" onclick="closeWordMemoryManager()">← 返回</button>
-
-            <div class="fc-setup-header">
-                <h2 class="fc-section-title">⚙️ 單字測驗記憶度管理</h2>
-                <p class="fc-section-desc">查看和編輯所有單字的測驗記錄</p>
+            <!-- 標題區域 - 返回按鈕與標題同一行 -->
+            <div class="fc-setup-header fc-mgr-header-with-back">
+                <button class="back-button fc-mgr-back" onclick="closeWordMemoryManager()">← 返回</button>
+                <div class="fc-mgr-title-group">
+                    <h2 class="fc-section-title">⚙️ 單字測驗記憶度管理</h2>
+                    <p class="fc-section-desc">查看和編輯所有單字的測驗記錄</p>
+                </div>
             </div>
 
             <!-- 搜尋和篩選 -->
@@ -546,11 +548,13 @@
              ⚙️ 句子測驗記憶度管理面板
         ════════════════════════════════════════ -->
         <div id="sentenceMemoryManagerPanel" class="categories-panel" style="display:none;">
-            <button class="back-button" onclick="closeSentenceMemoryManager()">← 返回</button>
-
-            <div class="fc-setup-header">
-                <h2 class="fc-section-title">⚙️ 句子測驗記憶度管理</h2>
-                <p class="fc-section-desc">查看和編輯所有句子的測驗記錄</p>
+            <!-- 標題區域 - 返回按鈕與標題同一行 -->
+            <div class="fc-setup-header fc-mgr-header-with-back">
+                <button class="back-button fc-mgr-back" onclick="closeSentenceMemoryManager()">← 返回</button>
+                <div class="fc-mgr-title-group">
+                    <h2 class="fc-section-title">⚙️ 句子測驗記憶度管理</h2>
+                    <p class="fc-section-desc">查看和編輯所有句子的測驗記錄</p>
+                </div>
             </div>
 
             <!-- 搜尋和篩選 -->
@@ -610,11 +614,13 @@
              ⚙️ 字卡記憶度管理 Panel 5：管理介面
         ════════════════════════════════════════ -->
         <div id="flashcardManagerPanel" class="categories-panel" style="display:none;">
-            <button class="back-button" onclick="fcBackToMenu()">← 返回</button>
-
-            <div class="fc-setup-header">
-                <h2 class="fc-section-title">記憶度管理</h2>
-                <p class="fc-section-desc">查看和編輯所有字卡的學習記錄</p>
+            <!-- 標題區域 - 返回按鈕與標題同一行 -->
+            <div class="fc-setup-header fc-mgr-header-with-back">
+                <button class="back-button fc-mgr-back" onclick="fcBackToMenu()">← 返回</button>
+                <div class="fc-mgr-title-group">
+                    <h2 class="fc-section-title">記憶度管理</h2>
+                    <p class="fc-section-desc">查看和編輯所有字卡的學習記錄</p>
+                </div>
             </div>
 
             <!-- 類型切換 -->
